# autoresearch_v2g

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  analysis.ipynb  prepare_v2g.py  program_v2g.md  pyproject.toml  strategy.py
