[project]
name = "autoresearch-v2g"
version = "0.1.0"
description = "Autonomous AI research for V2G fleet optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core numerics & data
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    # Optimization — LP/QP dispatch (standard in V2G literature, used by FlexMeasures)
    "cvxpy>=1.5.0",
    # Deep learning — for ML-based forecasting and RL policies
    "torch==2.9.1",
    "stable-baselines3>=2.3.0",      # PPO/SAC/TD3; used by EV2Gym
    # Energy market data
    "requests>=2.32.0",
    "entsoe-py>=0.6.0",              # ENTSO-E Transparency Platform (optional, needs token)
    # Visualization & analysis
    "matplotlib>=3.10.8",
    "pyarrow>=21.0.0",
    # Original autoresearch LM deps (kept for continuity)
    "kernels>=0.11.7",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
